force-app/core/objects/OAuthCredentials__c/OAuthCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OAuth Credentials</label>
</CustomObject>