force-app/core/objects/OAuthCredentials__c/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>