force-app/core/objects/OAuthCredentials__c/fields/instance_url__c.field-meta.xml
<CustomField>
    <fullName>instance_url__c</fullName>
    <label>instance_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>