force-app/core/objects/OAuthCredentials__c/fields/is_dev_edition__c.field-meta.xml
<CustomField>
    <fullName>is_dev_edition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_dev_edition</label>
    <type>Checkbox</type>
</CustomField>