force-app/core/objects/OAuthCredentials__c/fields/is_sandbox__c.field-meta.xml
<CustomField>
    <fullName>is_sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_sandbox</label>
    <type>Checkbox</type>
</CustomField>