force-app/core/objects/OAuthCredentials__c/fields/is_scratch__c.field-meta.xml
<CustomField>
    <fullName>is_scratch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_scratch</label>
    <type>Checkbox</type>
</CustomField>