force-app/core/objects/OAuthCredentials__c/fields/organization_id__c.field-meta.xml
<CustomField>
    <fullName>organization_id__c</fullName>
    <label>organization_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>