force-app/core/objects/OAuthCredentials__c/fields/user_display_name__c.field-meta.xml
<CustomField>
    <fullName>user_display_name__c</fullName>
    <label>user_display_name</label>
    <length>121</length>
    <type>Text</type>
</CustomField>