force-app/core/objects/OAuthCredentials__c/fields/user_email__c.field-meta.xml
<CustomField>
    <fullName>user_email__c</fullName>
    <label>user_email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>