force-app/core/objects/OAuthCredentials__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>user_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>