force-app/core/objects/OAuthCredentials__c/fields/user_username__c.field-meta.xml
<CustomField>
    <fullName>user_username__c</fullName>
    <label>user_username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>